# XRGyroControls_OpenXR

./: .gitignore  CMakeLists.txt  IOUSBLib_ios_hax.dylib  IndigoHID.swift  MoltenVK.diff  OpenXRWrapper.swift  README.md  SimulatorSupport.swift  build.sh  build2.sh  build_inject.sh  build_run.sh  build_simonly.sh  dummy.m  inject.sh  install.sh  libusb-1.0.0.dylib  libusb.patch  openxr-Bridging-Header.h  openxr_monado-dev.json  openxr_monado-dev.json.template  run.sh  uninstall.sh  visionos_stereo_screenshots.m
XRGyroControls.simdeviceui/Contents/: Info.plist
new_device_plists/: capabilities.plist  profile.plist
openxr_src/: Context.cpp  Context.h  Headset.cpp  Headset.h  Main.cpp  MirrorView.cpp  MirrorView.h  PoseData.cpp  PoseData.h  RenderProcess.cpp  RenderProcess.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Util.cpp
openxr_src/shaders/: Basic.vert  Rect.frag
orig_device_plists/: capabilities.plist  profile.plist
shaders/: Basic.vert  Basic.vert.spv  Cube.frag.spv  Grid.frag  Grid.frag.spv  HandL.vert  HandL.vert.spv  HandR.vert  HandR.vert.spv  Pt0.vert.spv  Pt1.vert.spv  Pt10.vert.spv  Pt11.vert.spv  Pt12.vert.spv  Pt13.vert.spv  Pt14.vert.spv  Pt15.vert.spv  Pt16.vert.spv  Pt17.vert.spv  Pt18.vert.spv  Pt19.vert.spv  Pt2.vert.spv  Pt20.vert.spv  Pt21.vert.spv  Pt22.vert.spv  Pt23.vert.spv  Pt24.vert.spv  Pt25.vert.spv  Pt26.vert.spv  Pt27.vert.spv  Pt28.vert.spv  Pt29.vert.spv  Pt3.vert.spv  Pt30.vert.spv  Pt31.vert.spv  Pt32.vert.spv  Pt33.vert.spv  Pt34.vert.spv  Pt35.vert.spv  Pt36.vert.spv  (+33 more)
simui/: CMakeLists.txt
simui/SimulatorKit/: SimulatorKit.swift
simui/simui_src/: SimulatorObjC.m  SimulatorSupport.swift  simui-Bridging-Header.h
simui_src/: IndigoHID.swift  SimulatorObjC.m  SimulatorSupport.swift  simui-Bridging-Header.h  simui_types.h
